# FbxParser

./: .gitignore  CMakeLists.txt  FindFbx.cmake  README.md  make.bat  package-lock.json  package.json
.github/workflows/: cmake.yml
CI/: GitHubInstall.ps1
FBX/Source/: 2.FBX  2002.FBX  60002_mingjiao_tielian@idle.FBX  DoubleDaggerStab.fbx  Great Sword Jump.fbx  titan.fbx  weapn_20011_long (1)15.fbx
Source/: FbxParser.cpp  FbxParser.h  FbxParser.private.h
Source/Builder/: AnimationClipBuilder.cpp  AnimationClipBuilder.h  MeshBuilder.cpp  MeshBuilder.h  MeshBuilder.private.h  SkinnedMeshBuilder.cpp  SkinnedMeshBuilder.h
Source/Importer/: Animation.h  Mesh.h  Scene.AnimationClip.cpp  Scene.Components.cpp  Scene.Material.cpp  Scene.Mesh.cpp  Scene.Texture.cpp  Scene.cpp  Scene.h
Test/: ImportOptions.hpp  Main.cpp
Test/Exporter/: AnimationClip.cpp  Avatar.cpp  Engine.cpp  Engine.h  Material.cpp  Mesh.cpp  Prefab.cpp  Resource.cpp  Resource.h  SkinnedMesh.cpp  Texture.cpp
Tools/: CodeGen.ts  ImportOptions.ts  Test.ts
